<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    tools:context="com.bookstore.admin.ui.book.edit.EditBookActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true">

            <ImageButton
                android:id="@+id/button_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@null"
                android:padding="@dimen/activity_padding"
                android:src="@drawable/ic_arrow_back_white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_padding"
                android:ellipsize="end"
                android:fontFamily="@font/rubik_medium"
                android:includeFontPadding="false"
                android:maxLines="1"
                android:text="@string/text_title_activity_edit_book"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_app_bar"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/button_delete"
                app:layout_constraintStart_toEndOf="@id/button_back"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/button_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@null"
                android:padding="@dimen/activity_padding"
                android:src="@drawable/ic_delete_white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_bar">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/activity_padding"
                        android:drawableStart="@drawable/ic_image_black"
                        android:drawablePadding="@dimen/activity_padding_half"
                        android:fontFamily="@font/rubik_bold"
                        android:gravity="center"
                        android:includeFontPadding="false"
                        android:text="@string/text_title_book_cover_activity_edit_book"
                        android:textColor="@android:color/black"
                        android:textSize="18sp" />

                    <ImageView
                        android:id="@+id/image_book_cover"
                        android:layout_width="150dp"
                        android:layout_height="200dp"
                        android:layout_gravity="center"
                        android:clickable="true"
                        android:contentDescription="@null"
                        android:focusable="true"
                        android:foreground="?attr/selectableItemBackground"
                        tools:ignore="UnusedAttribute" />

                    <Button
                        android:id="@+id/button_edit_book_cover"
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/activity_padding_half"
                        android:layout_marginBottom="@dimen/activity_padding"
                        android:text="@string/button_edit"
                        app:icon="@drawable/ic_edit_white"
                        app:iconPadding="10dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_padding"
                    android:background="@android:color/white"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/activity_padding"
                        android:drawableStart="@drawable/ic_title_black"
                        android:drawablePadding="@dimen/activity_padding_half"
                        android:fontFamily="@font/rubik_bold"
                        android:gravity="center"
                        android:includeFontPadding="false"
                        android:text="@string/text_title_book_title_activity_edit_book"
                        android:textColor="@android:color/black"
                        android:textSize="18sp" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/input_book_title"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/activity_padding"
                        android:layout_marginEnd="@dimen/activity_padding"
                        android:layout_marginBottom="@dimen/activity_padding"
                        android:fontFamily="@font/rubik"
                        android:hint="@string/text_hint_input_book_title">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text" />

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_padding"
                    android:background="@android:color/white"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/activity_padding"
                        android:drawableStart="@drawable/ic_category_black"
                        android:drawablePadding="@dimen/activity_padding_half"
                        android:fontFamily="@font/rubik_bold"
                        android:gravity="center"
                        android:includeFontPadding="false"
                        android:text="@string/text_title_book_category_activity_edit_book"
                        android:textColor="@android:color/black"
                        android:textSize="18sp" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/input_book_category"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/activity_padding"
                        android:layout_marginEnd="@dimen/activity_padding"
                        android:layout_marginBottom="@dimen/activity_padding">

                        <AutoCompleteTextView
                            android:id="@+id/input_text_book_category"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:editable="false"
                            tools:ignore="Deprecated,LabelFor" />

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_padding"
                    android:background="@android:color/white"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/activity_padding"
                        android:drawableStart="@drawable/ic_person_black"
                        android:drawablePadding="@dimen/activity_padding_half"
                        android:fontFamily="@font/rubik_bold"
                        android:gravity="center"
                        android:includeFontPadding="false"
                        android:text="@string/text_title_book_author_activity_edit_book"
                        android:textColor="@android:color/black"
                        android:textSize="18sp" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/input_book_author"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/activity_padding"
                        android:layout_marginEnd="@dimen/activity_padding"
                        android:layout_marginBottom="@dimen/activity_padding"
                        android:fontFamily="@font/rubik"
                        android:hint="@string/text_hint_input_book_author">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text" />

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_padding"
                    android:background="@android:color/white"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/activity_padding"
                        android:drawableStart="@drawable/ic_attach_money_black"
                        android:drawablePadding="@dimen/activity_padding_half"
                        android:fontFamily="@font/rubik_bold"
                        android:gravity="center"
                        android:includeFontPadding="false"
                        android:text="@string/text_title_book_price_activity_edit_book"
                        android:textColor="@android:color/black"
                        android:textSize="18sp" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/input_book_price"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/activity_padding"
                        android:layout_marginEnd="@dimen/activity_padding"
                        android:layout_marginBottom="@dimen/activity_padding"
                        android:fontFamily="@font/rubik"
                        android:hint="@string/text_hint_input_book_price">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="number" />

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_padding"
                    android:background="@android:color/white"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/activity_padding"
                        android:drawableStart="@drawable/ic_assignment_black"
                        android:drawablePadding="@dimen/activity_padding_half"
                        android:fontFamily="@font/rubik_bold"
                        android:gravity="center"
                        android:includeFontPadding="false"
                        android:text="@string/text_title_book_synopsis_activity_edit_book"
                        android:textColor="@android:color/black"
                        android:textSize="18sp" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/input_book_synopsis"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/activity_padding"
                        android:layout_marginEnd="@dimen/activity_padding"
                        android:layout_marginBottom="@dimen/activity_padding"
                        android:fontFamily="@font/rubik"
                        android:hint="@string/text_hint_input_book_synopsis">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textMultiLine" />

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_padding"
                    android:background="@android:color/white"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/activity_padding"
                        android:drawableStart="@drawable/ic_flag_black"
                        android:drawablePadding="@dimen/activity_padding_half"
                        android:fontFamily="@font/rubik_bold"
                        android:gravity="center"
                        android:includeFontPadding="false"
                        android:text="@string/text_title_book_status_activity_edit_book"
                        android:textColor="@android:color/black"
                        android:textSize="18sp" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/input_book_status"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/activity_padding"
                        android:layout_marginEnd="@dimen/activity_padding"
                        android:layout_marginBottom="@dimen/activity_padding">

                        <AutoCompleteTextView
                            android:id="@+id/input_text_book_status"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:editable="false"
                            tools:ignore="Deprecated,LabelFor" />

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

                <Button
                    android:id="@+id/button_save"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/activity_padding"
                    android:fontFamily="@font/rubik_medium"
                    android:text="@string/text_button_update" />

            </LinearLayout>

        </ScrollView>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</androidx.constraintlayout.widget.ConstraintLayout>